--- a/css/style.css
+++ b/css/style.css
@@ -427,10 +427,11 @@ body {
 .news_contant-list {
     display: flex;
     justify-content: space-between;
+    flex-wrap: wrap;
 }
 
 .news_contant-item {
-    width: calc(90% / 3);
+    width: 262px;
 }
 
 .news_contant-link {
@@ -442,6 +443,7 @@ body {
 .news_contant-link > img {
     border-radius: 3px;
     box-shadow: 0px 0px 2.667px 0px rgba(0, 0, 0, 0.50);
+    height: 175px;
 }
 
 .news-data {
